--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
     id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.3'
 }
@@ -15,15 +16,22 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'org.springframework.boot:spring-boot-starter'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2'
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
-test {
-    useJUnitPlatform()
+bootWar {
+    archiveFileName = 'slackbot-api.war'
 }
+
+//test {
+//    useJUnitPlatform()
+//}
