--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'war'
     id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.3'
 }
@@ -19,7 +18,6 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
@@ -28,10 +26,6 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
 }
 
-bootWar {
-    archiveFileName = 'slackbot-api.war'
+bootJar {
+    archiveFileName = 'slackbot-api.jar'
 }
-
-//test {
-//    useJUnitPlatform()
-//}
