--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2'
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
 }
 
 bootJar {
