--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-#org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+#warName=slackbot-api
+#applicationName=slackbot-api
+#artifact_version=1.0.0
+#product=slackbot
