--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,8 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
     implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
 
+    implementation 'org.apache.pdfbox:pdfbox:2.0.30'
+
     implementation 'org.projectlombok:lombok:1.18.30'
 
 }
