--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,8 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.30'
 
+    implementation 'org.apache.commons:commons-csv:1.8'
+
 }
 
 configurations.all {
