--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@
 //    implementation 'org.apache.pdfbox:pdfbox:2.0.30'
 //    implementation 'org.apache.pdfbox:fontbox:2.0.30'
 //
+//    implementation 'commons-codec:commons-codec:1.15'
 //
 //}
 //
@@ -156,6 +157,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.30'
 
     implementation 'org.apache.commons:commons-csv:1.8'
+
+    implementation 'commons-codec:commons-codec:1.15'
 
 }
 
