--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/main/resources/application.properties
+src/main/resources/application.yml
 ### Eclipse ###
 .apt_generated
 .classpath
