--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,9 @@ dependencies {
 
     implementation 'commons-codec:commons-codec:1.15'
 
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
 }
 
 configurations.all {
